update: overflow fixed for safari

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -50,6 +50,7 @@
 
 @media (max-width: 800px) {
     body {
+        position: fixed;
         overflow: hidden;
         touch-action: none;
     }
